--- a/SchedulingSystem/SchedulingSystem/appsettings.json
+++ b/SchedulingSystem/SchedulingSystem/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SchedulingSystemContext": "Server=(localdb)\\mssqllocaldb;Database=SchedulingSystemContext;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
