Awe CRUD Still crashes for me

--- a/SchedulingSystem/SchedulingSystem/appsettings.json
+++ b/SchedulingSystem/SchedulingSystem/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchedulingSystemContext": 
+         "Server=(localdb)\\mssqllocaldb;Database=SchedulingSystemContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
