--- a/SchedulingSystem/SchedulingSystem/SchedulingSystem.csproj
+++ b/SchedulingSystem/SchedulingSystem/SchedulingSystem.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Section\" />
+  </ItemGroup>
+
 </Project>
